--- a/WindowsFormsApp_QuanLyBanHang/WindowsFormsApp_QuanLyBanHang.csproj
+++ b/WindowsFormsApp_QuanLyBanHang/WindowsFormsApp_QuanLyBanHang.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDMHangHoa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDMHangHoa.Designer.cs">
+      <DependentUpon>frmDMHangHoa.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPhanLoai.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDMHangHoa.resx">
+      <DependentUpon>frmDMHangHoa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPhanLoai.resx">
       <DependentUpon>frmPhanLoai.cs</DependentUpon>
