--- a/WindowsFormsApp_QuanLyBanHang/WindowsFormsApp_QuanLyBanHang.csproj
+++ b/WindowsFormsApp_QuanLyBanHang/WindowsFormsApp_QuanLyBanHang.csproj
@@ -58,6 +58,18 @@
     <Compile Include="frmDMHangHoa.Designer.cs">
       <DependentUpon>frmDMHangHoa.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDMKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDMKhachHang.Designer.cs">
+      <DependentUpon>frmDMKhachHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDMNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDMNhanVien.Designer.cs">
+      <DependentUpon>frmDMNhanVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPhanLoai.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +83,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmDMHangHoa.resx">
       <DependentUpon>frmDMHangHoa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDMKhachHang.resx">
+      <DependentUpon>frmDMKhachHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDMNhanVien.resx">
+      <DependentUpon>frmDMNhanVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPhanLoai.resx">
       <DependentUpon>frmPhanLoai.cs</DependentUpon>
