--- a/WindowsFormsApp_QuanLyBanHang/WindowsFormsApp_QuanLyBanHang.csproj
+++ b/WindowsFormsApp_QuanLyBanHang/WindowsFormsApp_QuanLyBanHang.csproj
@@ -70,6 +70,12 @@
     <Compile Include="frmDMNhanVien.Designer.cs">
       <DependentUpon>frmDMNhanVien.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmHoaDonBan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHoaDonBan.Designer.cs">
+      <DependentUpon>frmHoaDonBan.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPhanLoai.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmDMNhanVien.resx">
       <DependentUpon>frmDMNhanVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmHoaDonBan.resx">
+      <DependentUpon>frmHoaDonBan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPhanLoai.resx">
       <DependentUpon>frmPhanLoai.cs</DependentUpon>
